--- a/app/src/main/res/layout/fragment_address.xml
+++ b/app/src/main/res/layout/fragment_address.xml
@@ -66,11 +66,13 @@
 
                                 <ImageView
                                     android:id="@+id/img_back"
-                                    android:layout_width="25dp"
-                                    android:layout_height="25dp"
                                     android:layout_alignParentStart="true"
                                     android:layout_marginTop="10dp"
-                                    android:src="@drawable/ic_back_categories" />
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:contentDescription="@string/image"
+                                    android:scaleType="centerCrop"
+                                    android:src="@drawable/ic_back_white"/>
 
                                 <TextView
                                     android:id="@+id/title"
