--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -119,6 +119,7 @@
                         android:orientation="horizontal">
 
                         <com.google.android.material.textfield.TextInputLayout
+                            android:id="@+id/search_bar"
                             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                             android:layout_width="match_parent"
                             android:layout_height="38dp"
@@ -131,6 +132,7 @@
                             app:startIconDrawable="@drawable/ic_search">
 
                             <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/tiet_search_bar"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:background="@drawable/bg_search"
@@ -141,7 +143,7 @@
                         </com.google.android.material.textfield.TextInputLayout>
 
                         <ImageView
-                            android:id="@+id/notification"
+                            android:id="@+id/img_notification"
                             android:layout_width="38dp"
                             android:layout_height="38dp"
                             android:layout_alignParentEnd="true"
