--- a/app/src/main/res/layout/fragment_cart_second.xml
+++ b/app/src/main/res/layout/fragment_cart_second.xml
@@ -71,11 +71,13 @@
 
                             <ImageView
                                 android:id="@+id/img_back"
-                                android:layout_width="25dp"
-                                android:layout_height="25dp"
                                 android:layout_alignParentStart="true"
                                 android:layout_marginTop="10dp"
-                                android:src="@drawable/ic_back_categories" />
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:contentDescription="@string/image"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/ic_back_white"/>
 
                             <TextView
                                 android:id="@+id/title"
@@ -90,12 +92,12 @@
                                 android:textStyle="bold" />
 
                             <ImageView
-                                android:src="@drawable/ic__notifications"
+                                android:id="@+id/img_notification"
                                 android:layout_width="33dp"
                                 android:layout_height="30dp"
+                                android:layout_alignParentEnd="true"
                                 android:layout_marginTop="5dp"
-                                android:id="@+id/cl_cart"
-                                android:layout_alignParentEnd="true"/>
+                                android:src="@drawable/ic__notifications" />
                         </RelativeLayout>
                     </LinearLayout>
                 </androidx.appcompat.widget.Toolbar>
