--- a/app/src/main/res/layout/fragment_check_out.xml
+++ b/app/src/main/res/layout/fragment_check_out.xml
@@ -69,11 +69,13 @@
 
                             <ImageView
                                 android:id="@+id/img_back"
-                                android:layout_width="25dp"
-                                android:layout_height="25dp"
                                 android:layout_alignParentStart="true"
                                 android:layout_marginTop="10dp"
-                                android:src="@drawable/ic_back_categories" />
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:contentDescription="@string/image"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/ic_back_white"/>
 
                             <TextView
                                 android:id="@+id/title"
@@ -93,13 +95,13 @@
                                 android:layout_marginTop="5dp"
                                 android:id="@+id/cl_cart"
                                 android:layout_alignParentEnd="true">
+
                                 <ImageView
-                                    android:layout_width="26dp"
+                                    android:layout_width="wrap_content"
                                     android:layout_height="26dp"
                                     android:layout_gravity="bottom|left"
                                     android:contentDescription="@string/image"
                                     android:src="@drawable/ic_cart_user_detail"
-                                    android:id="@+id/img_cart"
                                     tools:ignore="RtlHardcoded" />
                                 <TextView
                                     android:layout_gravity="right|top"
@@ -137,11 +139,13 @@
                 android:text="Address"
                 android:textSize="16dp"
                 android:textColor="#272422" />
+
                 <ImageView
-                    android:layout_alignParentEnd="true"
+                    android:id="@+id/img_edit_address"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:src="@drawable/ic_pencil"/>
+                    android:layout_alignParentEnd="true"
+                    android:src="@drawable/ic_pencil" />
             </RelativeLayout>
             <LinearLayout
                 android:background="#F2F2F2"
@@ -218,11 +222,13 @@
                 android:text="Items"
                 android:textSize="16dp"
                 android:textColor="#272422" />
+
                 <ImageView
-                    android:layout_alignParentEnd="true"
+                    android:id="@+id/img_cart_2"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:src="@drawable/ic_cart_green"/>
+                    android:layout_alignParentEnd="true"
+                    android:src="@drawable/ic_cart_green" />
             </RelativeLayout>
              <LinearLayout
                  android:background="#F2F2F2"
