--- a/app/src/main/res/layout/fragment_person.xml
+++ b/app/src/main/res/layout/fragment_person.xml
@@ -77,7 +77,7 @@
                                 android:textStyle="bold" />
 
                             <ImageView
-                                android:id="@+id/notification"
+                                android:id="@+id/img_notification"
                                 android:layout_width="38dp"
                                 android:layout_height="38dp"
                                 android:layout_alignParentEnd="true"
@@ -137,6 +137,7 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <LinearLayout
+                        android:id="@+id/ln_edit_info"
                         android:layout_width="120dp"
                         android:layout_height="120dp"
                         android:gravity="center"
