--- a/app/src/main/res/layout/fragment_rate_now.xml
+++ b/app/src/main/res/layout/fragment_rate_now.xml
@@ -67,11 +67,13 @@
 
                                 <ImageView
                                     android:id="@+id/img_back"
-                                    android:layout_width="25dp"
-                                    android:layout_height="25dp"
                                     android:layout_alignParentStart="true"
                                     android:layout_marginTop="10dp"
-                                    android:src="@drawable/ic_back_categories" />
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:contentDescription="@string/image"
+                                    android:scaleType="centerCrop"
+                                    android:src="@drawable/ic_back_white"/>
 
                                 <TextView
                                     android:id="@+id/title"
@@ -133,9 +135,9 @@
             android:layout_height="wrap_content"
             tools:listitem="@layout/item_need_rating"
             listRateNow="@{viewModel.listRateNow}"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="60dp"
-            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="55dp"
+            android:layout_marginHorizontal="15dp"
             android:id="@+id/rc_rate_now" />
     </LinearLayout>
 
