--- a/app/src/main/res/layout/fragment_rated.xml
+++ b/app/src/main/res/layout/fragment_rated.xml
@@ -66,11 +66,13 @@
 
                             <ImageView
                                 android:id="@+id/img_back"
-                                android:layout_width="25dp"
-                                android:layout_height="25dp"
                                 android:layout_alignParentStart="true"
                                 android:layout_marginTop="10dp"
-                                android:src="@drawable/ic_back_categories" />
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:contentDescription="@string/image"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/ic_back_white"/>
 
                             <TextView
                                 android:id="@+id/title"
@@ -127,16 +129,22 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingHorizontal="20dp"
+            android:clipToPadding="false">
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:listitem="@layout/item_rated"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="3dp"
             tools:itemCount="3"
+            android:clipToPadding="false"
             android:layout_marginBottom="60dp"
-            android:layout_marginHorizontal="20dp"
             android:id="@+id/rc_rated"
             listRated="@{viewModel.listRated}"/>
+        </LinearLayout>
     </LinearLayout>
 
 </layout>
