--- a/app/src/main/res/layout/fragment_rating.xml
+++ b/app/src/main/res/layout/fragment_rating.xml
@@ -69,11 +69,13 @@
 
                                 <ImageView
                                     android:id="@+id/img_back"
-                                    android:layout_width="25dp"
-                                    android:layout_height="25dp"
                                     android:layout_alignParentStart="true"
                                     android:layout_marginTop="10dp"
-                                    android:src="@drawable/ic_back_categories" />
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:contentDescription="@string/image"
+                                    android:scaleType="centerCrop"
+                                    android:src="@drawable/ic_back_white"/>
 
                                 <TextView
                                     android:id="@+id/title"
@@ -181,7 +183,8 @@
             android:orientation="horizontal">
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="wrap_content"
-            android:layout_height="90dp"
+            android:layout_height="99dp"
+            android:layout_gravity="center_vertical"
             tools:listitem="@layout/item_img_add_rating"
             android:layout_marginRight="10dp"
             listOnRatingImage="@{viewModel.listChoseImage}"
