--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -208,7 +208,7 @@
                 <LinearLayout
                     android:id="@+id/messageBox"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="65dp"
                     android:layout_alignParentBottom="true"
                     android:layout_gravity="bottom"
                     android:layout_marginTop="10dp"
@@ -227,35 +227,40 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
-                        android:background="@drawable/bg_input_edit_text_message"
-                        android:layout_marginRight="11dp"
                         android:layout_marginVertical="5dp"
-                        android:orientation="horizontal"
-                        android:paddingHorizontal="10dp">
+                        android:layout_marginRight="11dp"
+                        android:background="@drawable/bg_input_edit_text_message"
+                        android:orientation="horizontal">
 
-                        <EditText
+                        <com.google.android.material.textfield.TextInputLayout
+                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                             android:layout_width="match_parent"
-                            android:layout_height="50dp"
-                            android:layout_marginStart="5dp"
-                            android:layout_toStartOf="@+id/sentMessange"
-                            android:background="@null"
-                            android:elevation="1dp"
-                            android:focusable="true"
-                            android:hint="@string/type_here"
-                            android:inputType="text"
-                            android:text="@={viewModel.newMessage}"
-                            android:textColor="@color/disable_pray"
-                            app:boxBackgroundMode="none" />
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="40dp"
+                            app:boxBackgroundColor="#00000000"
+                            app:boxStrokeColor="#00000000"
+                            app:boxStrokeWidth="0dp"
+                            app:boxStrokeWidthFocused="0dp"
+                            app:hintEnabled="false">
+
+                            <EditText
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:hint="@string/type_here"
+                                android:inputType="text"
+                                android:text="@={viewModel.newMessage}"
+                                android:textSize="16sp" />
+                        </com.google.android.material.textfield.TextInputLayout>
 
                         <ImageView
                             android:id="@+id/sentMessange"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
-                            android:onClick="@{() -> viewModel.addMessage()}"
                             android:layout_centerVertical="true"
-                            android:src="@drawable/ic_send_message">
-                        </ImageView>
+                            android:layout_marginRight="10dp"
+                            android:onClick="@{() -> viewModel.addMessage()}"
+                            android:src="@drawable/ic_send_message" />
                     </RelativeLayout>
                 </LinearLayout>
             </RelativeLayout>
