--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -7,6 +7,7 @@
             type="com.example.aposs_buyer.model.DetailCategory"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/item"
         android:layout_width="match_parent"
         android:layout_height="260dp"
         android:layout_marginTop="20dp"
@@ -15,7 +16,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/categories">
+
         <androidx.cardview.widget.CardView
+            android:id="@+id/cardViewPager"
             android:layout_width="match_parent"
             android:layout_height="160dp"
             android:layout_marginHorizontal="13dp"
@@ -24,7 +27,8 @@
             app:cardElevation="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            >
             <!--Put automatic page view here-->
             <androidx.viewpager2.widget.ViewPager2
                 detailCategoryImages="@{category.images}"
