--- a/app/src/main/res/navigation/navigation_cart_second.xml
+++ b/app/src/main/res/navigation/navigation_cart_second.xml
@@ -15,6 +15,7 @@
             app:destination="@id/checkOutFragment" />
     </fragment>
     <fragment
+        tools:layout="@layout/fragment_check_out"
         android:id="@+id/checkOutFragment"
         android:name="com.example.aposs_buyer.uicontroler.fragment.CheckOutFragment"
         android:label="CheckOutFragment" >
