--- a/app/src/main/res/layout/fragment_address.xml
+++ b/app/src/main/res/layout/fragment_address.xml
@@ -97,9 +97,10 @@
                                         android:layout_height="26dp"
                                         android:layout_gravity="bottom|left"
                                         android:contentDescription="@string/image"
-                                        android:src="@drawable/ic_cart_user_detail"
+                                        android:src="@drawable/ic_cart"
                                         android:id="@+id/img_cart"
-                                        tools:ignore="RtlHardcoded" />
+                                        tools:ignore="RtlHardcoded"
+                                        app:tint="@color/white" />
                                     <TextView
                                         android:layout_gravity="right|top"
                                         android:layout_width="14dp"
