--- a/app/src/main/res/navigation/navigation_detail_product.xml
+++ b/app/src/main/res/navigation/navigation_detail_product.xml
@@ -29,6 +29,9 @@
         <action
             android:id="@+id/action_detailProductFragment_to_cartFragment2"
             app:destination="@id/cartFragment2" />
+        <action
+            android:id="@+id/action_detailProductFragment_to_productDetailDialogFragment"
+            app:destination="@id/productDetailDialogFragment" />
     </fragment>
     <fragment
         android:id="@+id/fullScreenImageFragment"
@@ -60,4 +63,47 @@
         android:id="@+id/cartFragment2"
         android:name="com.example.aposs_buyer.uicontroler.fragment.CartFragment"
         android:label="CartFragment" />
+    <fragment
+        tools:layout="@layout/fragment_check_out"
+        android:id="@+id/checkOutFragment"
+        android:name="com.example.aposs_buyer.uicontroler.fragment.CheckOutFragment"
+        android:label="CheckOutFragment" >
+        <action
+            android:id="@+id/action_checkOutFragment_to_checkOutDialogFragment"
+            app:destination="@id/checkOutDialogFragment" />
+        <argument
+            android:name="item"
+            app:argType="com.example.aposs_buyer.model.CartItem"
+            app:nullable="true"
+            android:defaultValue="@null" />
+    </fragment>
+    <dialog
+        android:id="@+id/checkOutDialogFragment"
+        android:name="com.example.aposs_buyer.uicontroler.fragment.CheckOutDialogFragment"
+        android:label="fragment_check_out_dialog"
+        tools:layout="@layout/fragment_check_out_dialog" >
+        <action
+            android:id="@+id/action_checkOutDialogFragment_to_finishCheckOutFragment"
+            app:destination="@id/finishCheckOutFragment" />
+    </dialog>
+    <fragment
+        android:id="@+id/finishCheckOutFragment"
+        android:name="com.example.aposs_buyer.uicontroler.fragment.FinishCheckOutFragment"
+        android:label="fragment_finish_check_out"
+        tools:layout="@layout/fragment_finish_check_out" >
+    </fragment>
+    <dialog
+        tools:layout="@layout/fragment_product_detail_dialog_list_dialog"
+        android:id="@+id/productDetailDialogFragment"
+        android:name="com.example.aposs_buyer.uicontroler.fragment.ProductDetailDialogFragment"
+        android:label="ProductDetailDialogFragment" >
+        <action
+            android:id="@+id/action_productDetailDialogFragment_to_checkOutFragment"
+            app:destination="@id/checkOutFragment" />
+        <argument
+            android:name="dialogType"
+            app:argType="com.example.aposs_buyer.utils.DialogType"
+            android:defaultValue="CartDialog" />
+    </dialog>
+
 </navigation>
