--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -121,6 +121,7 @@
                                 app:startIconDrawable="@drawable/ic_search">
 
                                 <com.google.android.material.textfield.TextInputEditText
+                                    android:id="@+id/search"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:background="@drawable/bg_search"
