--- a/app/src/main/res/layout/fragment_product_of_kind.xml
+++ b/app/src/main/res/layout/fragment_product_of_kind.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
         <variable
             name="viewModel"
             type="com.example.aposs_buyer.viewmodel.ProductOfKindViewModel" />
     </data>
+
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/back_ground"
+        android:orientation="vertical"
         tools:context=".uicontroler.fragment.ProductOfKindFragment">
 
         <com.google.android.material.appbar.AppBarLayout
@@ -22,11 +25,13 @@
             android:theme="@style/ThemeOverlay.AppCompat.Light"
             app:elevation="0dp"
             app:liftOnScroll="false">
+
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:expandedTitleGravity="top"
                 app:layout_scrollFlags="noScroll">
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
@@ -70,7 +75,7 @@
                                     android:layout_height="25dp"
                                     android:layout_alignParentStart="true"
                                     android:layout_marginTop="10dp"
-                                    android:src="@drawable/ic_back_categories" />
+                                    android:src="@drawable/ic_back_white" />
 
                                 <TextView
                                     android:id="@+id/title"
@@ -87,8 +92,8 @@
                                 <androidx.constraintlayout.widget.ConstraintLayout
                                     android:layout_width="27dp"
                                     android:layout_height="27dp"
-                                    android:layout_marginTop="5dp"
-                                    android:layout_alignParentEnd="true">
+                                    android:layout_alignParentEnd="true"
+                                    android:layout_marginTop="5dp">
 
                                     <ImageView
                                         android:id="@+id/cart"
@@ -99,9 +104,10 @@
                                         android:layout_marginEnd="20dp"
                                         android:contentDescription="@string/image"
                                         android:scaleType="centerCrop"
-                                        android:src="@drawable/ic_shopping_cart"
+                                        android:src="@drawable/ic_cart"
                                         app:layout_constraintBottom_toBottomOf="parent"
-                                        app:layout_constraintStart_toStartOf="parent" />
+                                        app:layout_constraintStart_toStartOf="parent"
+                                        app:tint="@color/white" />
 
                                     <androidx.cardview.widget.CardView
                                         android:layout_width="14dp"
@@ -132,6 +138,7 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="38dp"
                                     android:layout_below="@+id/title"
+                                    android:layout_marginTop="5dp"
                                     app:boxStrokeColor="@color/disable_pray"
                                     app:boxStrokeWidth="1dp"
                                     app:boxStrokeWidthFocused="2dp"
@@ -169,55 +176,56 @@
                                         android:layout_marginEnd="10dp"
                                         android:text="Sort by:"
                                         android:textColor="@color/white"
-                                        android:textSize="15dp"
+                                        android:textSize="14dp"
                                         android:textStyle="bold" />
 
                                     <androidx.appcompat.widget.AppCompatButton
-                                        android:layout_width="55dp"
+                                        android:layout_width="46dp"
                                         android:layout_height="25dp"
-                                        android:layout_marginEnd="10dp"
+                                        android:layout_marginEnd="8dp"
                                         android:background="@drawable/bg_btn_filter"
                                         android:text="Rating"
                                         android:textAllCaps="false"
                                         android:textColor="@color/white"
-                                        android:textSize="15dp" />
+                                        android:textSize="13dp" />
 
                                     <androidx.appcompat.widget.AppCompatButton
-                                        android:layout_width="79dp"
+                                        android:layout_width="69dp"
                                         android:layout_height="25dp"
-                                        android:layout_marginEnd="10dp"
+                                        android:layout_marginEnd="8dp"
                                         android:background="@drawable/bg_btn_filter"
                                         android:text="Purchased"
                                         android:textAllCaps="false"
                                         android:textColor="@color/white"
-                                        android:textSize="15dp" />
+                                        android:textSize="13dp" />
 
                                     <androidx.appcompat.widget.AppCompatButton
-                                        android:layout_width="60dp"
+                                        android:layout_width="55dp"
                                         android:layout_height="25dp"
-                                        android:layout_marginEnd="10dp"
                                         android:background="@drawable/bg_btn_filter"
                                         android:text="Product"
                                         android:textAllCaps="false"
                                         android:textColor="@color/white"
-                                        android:textSize="15dp" />
+                                        android:textSize="13dp" />
                                 </LinearLayout>
                             </RelativeLayout>
                         </LinearLayout>
                     </androidx.appcompat.widget.Toolbar>
                 </androidx.constraintlayout.widget.ConstraintLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="200dp"
-                    android:layout_marginHorizontal="18dp">
+                    android:layout_marginHorizontal="18dp"
+                    android:layout_marginTop="200dp">
+
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rc_products"
                         listProduct="@{viewModel.productKind}"
                         android:layout_width="match_parent"
-                        android:layout_marginTop="10dp"
                         android:layout_height="wrap_content"
-                        tools:listitem="@layout/item_product"/>
+                        android:layout_marginTop="10dp"
+                        tools:listitem="@layout/item_product" />
                 </LinearLayout>
             </com.google.android.material.appbar.CollapsingToolbarLayout>
         </com.google.android.material.appbar.AppBarLayout>
