--- a/app/src/main/res/layout/item_check_out_confirm.xml
+++ b/app/src/main/res/layout/item_check_out_confirm.xml
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#262626"
-        android:text="@{cartItem.priceFormat, default=ahihi}"
+        android:text="@{cartItem.priceFormat}"
         android:textSize="14dp"/>
 </RelativeLayout>
 </layout>
