--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -82,6 +82,7 @@
                     android:textColor="@color/disable_pray" />
 
                 <TextView
+                    android:id="@+id/seeNow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
