--- a/app/src/main/res/layout/item_rated.xml
+++ b/app/src/main/res/layout/item_rated.xml
@@ -33,6 +33,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:scaleType="centerCrop"
                         image="@{ratedItem.productImage.imageUri}"
                         android:layout_width="63dp"
                         android:layout_height="63dp"
