--- a/app/src/main/res/navigation/navigation_notification.xml
+++ b/app/src/main/res/navigation/navigation_notification.xml
@@ -9,6 +9,54 @@
         android:id="@+id/notificationFragment"
         android:name="com.example.aposs_buyer.uicontroler.fragment.NotificationFragment"
         android:label="fragment_notification"
-        tools:layout="@layout/fragment_notification" />
+        tools:layout="@layout/fragment_notification" >
+        <action
+            android:id="@+id/action_notificationFragment_to_detailOrderFragment"
+            app:destination="@id/detailOrderFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/orderFragment"
+        android:name="com.example.aposs_buyer.uicontroler.fragment.OrderFragment"
+        android:label="fragment_order"
+        tools:layout="@layout/fragment_order" >
+        <action
+            android:id="@+id/action_orderFragment_to_detailOrderFragment"
+            app:destination="@id/detailOrderFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailOrderFragment"
+        android:name="com.example.aposs_buyer.uicontroler.fragment.DetailOrderFragment"
+        android:label="fragment_detail_order"
+        tools:layout="@layout/fragment_detail_order" >
+        <argument
+            android:name="id"
+            app:argType="long"
+            android:defaultValue="-1L" />
+        <action
+            android:id="@+id/action_detailOrderFragment_to_cancelOrderFragment"
+            app:destination="@id/cancelOrderFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/cancelOrderFragment"
+        android:name="com.example.aposs_buyer.uicontroler.fragment.CancelOrderFragment"
+        android:label="fragment_cancel_order"
+        tools:layout="@layout/fragment_cancel_order" >
+        <argument
+            android:name="id"
+            app:argType="long"
+            android:defaultValue="-1L" />
+        <action
+            android:id="@+id/action_cancelOrderFragment_to_cancelOrderConfirmFragment"
+            app:destination="@id/cancelOrderConfirmFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/cancelOrderConfirmFragment"
+        android:name="com.example.aposs_buyer.uicontroler.fragment.CancelOrderConfirmFragment"
+        android:label="fragment_cancel_order_confirm"
+        tools:layout="@layout/fragment_cancel_order_confirm" >
+        <action
+            android:id="@+id/action_cancelOrderConfirmFragment_to_orderFragment"
+            app:destination="@id/orderFragment" />
+    </fragment>
 
 </navigation>
