done save loginstate

--- a/app/src/main/res/layout/fragment_person.xml
+++ b/app/src/main/res/layout/fragment_person.xml
@@ -291,6 +291,7 @@
                             android:textStyle="bold"
                             android:elevation="0dp"/>
                         <androidx.appcompat.widget.AppCompatButton
+                            android:id="@+id/signIn"
                             android:layout_marginTop="20dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -298,7 +299,7 @@
                             android:drawableStart="@drawable/ic_sign_out"
                             android:textAlignment="textStart"
                             android:textAllCaps="false"
-                            android:text="   Sign out"
+                            android:text="   Login or sign up now"
                             android:textSize="16dp"
                             android:textColor="@color/person_color" />
                         <LinearLayout
