--- a/app/src/main/res/layout/item_check_out_confirm.xml
+++ b/app/src/main/res/layout/item_check_out_confirm.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:textColor="#262626"
         android:text="@{cartItem.name}"
-        android:textSize="14dp"/>
+        android:textSize="14sp"/>
     <TextView
         android:id="@+id/tv_amount"
         android:layout_width="wrap_content"
@@ -27,7 +27,7 @@
         android:text="@{cartItem.amountShortFormat}"
         android:gravity="center"
         android:layout_centerInParent="true"
-        android:textSize="14dp"/>
+        android:textSize="14sp"/>
     <TextView
         android:layout_centerVertical="true"
         android:gravity="center_vertical"
@@ -37,6 +37,6 @@
         android:layout_height="wrap_content"
         android:textColor="#262626"
         android:text="@{cartItem.priceFormat}"
-        android:textSize="14dp"/>
+        android:textSize="14sp"/>
 </RelativeLayout>
 </layout>
